--- a/gradle.properties
+++ b/gradle.properties
@@ -4,11 +4,12 @@ org.gradle.jvmargs  = -Xmx1G
 minecraft_version   = 1.16.1
 yarn_mappings       = 1.16.1+build.21
 loader_version      = 0.9.0+build.204
+#Fabric api
+gamerule_version      = 1.0.0+
+resources_version      = 0.2.8+
 
 #Mod properties
-mod_version         = 0.0.1
+mod_version         = 0.0.2
 maven_group         = mod.linguardium.mobcapped
 archives_base_name  = mobcapped
 
-#Dependencies
-fabric_api_version  = 0.15.1+build.380-1.16.1
